fixed dark mode fully: - used only variables found in app.css. To change colours, only change the vars in app.css

--- a/src/pagestyles/App.css
+++ b/src/pagestyles/App.css
@@ -19,7 +19,7 @@
   --primary-color: #8E44AD;
   --secondary-color: #333;
   --accent-color: #8E44AD;
-  --text-color: #333;
+  --text-color: #fff;
   --background-color: #000;
 }
 
